--- a/templates/base-karfa.html
+++ b/templates/base-karfa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='still.css') }}">
+    <link href="/stylesheets/still.css" rel="stylesheet" type="text/css" />
     {% block refresh %} {% endblock %}
 </head>
 <body>
