--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='still.css')}}">
+    <link href="/stylesheets/still.css" rel="stylesheet" type="text/css" />
     
 </head>
 <body>
