--- a/static/still.css
+++ b/static/still.css
@@ -53,7 +53,7 @@ table {
   }
   
   td, th {
-    border: 1px solid green;
+    border: 1px solid plum;
     text-align: left;
     padding: 8px;
   }
